syntax = "proto3";

package common;

option go_package = "github.com/JMURv/e-commerce/api/pb/common";

import "google/protobuf/timestamp.proto";

message User {
  uint64 id = 1;
  string username = 2;
  string email = 3;
  bool is_admin = 4;
}

message Category {
  uint64 id = 1;
  string name = 2;
  string description = 3;
  uint64 parent_category_id = 4;
  Category parent_category = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message Item {
  uint64 id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  uint64 category_id = 5;
  Category category = 6;
  uint64 user_id = 7;
  User user = 8;
  repeated Tag tags = 9;
  string status = 10;
  int32 quantity = 11;
  google.protobuf.Timestamp created_at = 12;
  google.protobuf.Timestamp updated_at = 13;
}

message Tag {
  string name = 1;
}

message Review {
  uint64 review_id = 1;
  uint64 user_id = 2;
  User user = 3;
  uint64 item_id = 4;
  Item item = 5;
  uint64 reviewed_user_id = 6;
  User reviewed_user = 7;
  string advantages = 8;
  string disadvantages = 9;
  string review_text = 10;
  uint32 rating = 11;
}

message Favorite {
  uint64 id = 1;
  uint64 user_id = 2;
  uint64 item_id = 4;
  Item item = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}
